Build UI - Flexbox, Custom Scrollbar

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Trees Image - Pexels: https://www.pexels.com/photo/photo-of-trees-in-forest-3801030/ */
 @import url("https://fonts.googleapis.com/css?family=Quicksand&display=swap");
 
 html {
@@ -14,7 +13,7 @@ html {
 
 body {
   margin: 0;
-  background: url("./trees.jpg");
+  background: url("./background.jpg");
   background-size: cover;
   background-position: 50% 60%;
   background-attachment: fixed;
@@ -50,7 +49,7 @@ ul {
 
 /* Columns */
 .drag-column {
-
+  flex: 1; /* Evenly devide the space */
   margin: 0 10px;
   position: relative;
   background-color: rgba(0, 0, 0, 0.4);
